--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "deploy": "rollup -c && node deploy.js"
+    "deploy": "rollup -c && cp public/index.html ."
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^12.0.0",
